Bug 136326 - Crash in About dialog with SKIA Linux
Summary: Crash in About dialog with SKIA Linux
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords: haveBacktrace
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-08-31 13:25 UTC by Julien Nabet
Modified: 2020-09-14 01:40 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (15.45 KB, text/plain)
2020-08-31 13:25 UTC, Julien Nabet
Details
cpuinfo (16.30 KB, text/plain)
2020-08-31 14:08 UTC, Julien Nabet
Details
config.log (173.09 KB, text/x-log)
2020-08-31 14:09 UTC, Julien Nabet
Details
Valgrind trace (591.85 KB, text/x-log)
2020-09-02 14:14 UTC, Julien Nabet
Details
Valgrind trace 2 (392.63 KB, text/x-log)
2020-09-02 14:20 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2020-08-31 13:25:18 UTC
Description:
Hello,

On pc Debian x86-64 with master sources updated today, I got a crash when trying to open About dialog with SKIA

Steps to Reproduce:
1. Launch console/term
2. export SAL_USE_VCLPLUGIN=gen && export SAL_FORCESKIA=1 && ./soffice.bin
3. Menu Help/About

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: Yes



Additional Info:
I can also reproduce this with SAL_FORCESKIA=0
but I don't reproduce this if I unset SAL_FORCESKIA
Comment 1 Julien Nabet 2020-08-31 13:25:37 UTC
Created attachment 164920 [details]
bt with debug symbols
Comment 2 Luboš Luňák 2020-08-31 14:07:08 UTC
Please attach your /proc/cpuinfo and config.log (from build dir).
Comment 3 Julien Nabet 2020-08-31 14:08:43 UTC
Created attachment 164924 [details]
cpuinfo
Comment 4 Julien Nabet 2020-08-31 14:09:13 UTC
Created attachment 164925 [details]
config.log
Comment 5 Luboš Luňák 2020-09-02 11:20:07 UTC
Please run this in Valgrind and attach the log ("VALGRIND=memcheck soffice").

Also, why do you use soffice.bin directly instead of the wrapper script? And why do you force Skia instead of just enabling it?
Comment 6 Julien Nabet 2020-09-02 12:30:12 UTC
(In reply to Luboš Luňák from comment #5)
> Please run this in Valgrind and attach the log ("VALGRIND=memcheck soffice").
Ok, I gonna update my second local repo (where there are symbols but no enable-dbgutil) + run "make clean && make".
I'll provide a Valgrind trace afterwards.

> Also, why do you use soffice.bin directly instead of the wrapper script?
I just used Miklos' suggestion from http://document-foundation-mail-archive.969070.n3.nabble.com/How-to-enable-Skia-on-Linux-tt4286424.html#a4286466
I don't know the diff between soffice and soffice.bin

> And why do you force Skia instead of just enabling it? since by default SKIA wasn't enabled. 
It's not the case for me, that's why I had created http://document-foundation-mail-archive.969070.n3.nabble.com/How-to-enable-Skia-on-Linux-tt4286424.html#a4286466 thread and saw SAL_FORCESKIA option from Miklos's feedback.
Comment 7 Julien Nabet 2020-09-02 14:14:46 UTC
Created attachment 165031 [details]
Valgrind trace
Comment 8 Julien Nabet 2020-09-02 14:20:53 UTC
Created attachment 165032 [details]
Valgrind trace 2

Here's a second Valgrind trace after a crash when just did this:
./soffice --norestore --valgrind >& /tmp/valgrind2.log

(BTW, I still need SAL_USE_VCLPLUGIN=gen and export SAL_FORCESKIA=1 without them, LO doesn't use SKIA)
Comment 9 Commit Notification 2020-09-03 19:15:40 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7d0e9168daba1411c15315a4d5f481ed1e5dc356

fix offsets in our SSSE3 Skia functions (tdf#136326)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2020-09-03 19:15:50 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fddbf05d5b9b83863c1bf85e5c9821d87671768e

initialize possible CPU intrinsics use also for normal Skia (tdf#136326)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Julien Nabet 2020-09-04 05:30:06 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this.
I can see I use SKIA/Vulkan after export SAL_USE_VCLPLUGIN=gen && export SAL_FORCESKIA=1
Thank you Luboš!

(remark: I did a "make postprocess" and removed user profile, I still need to also use "SAL_FORCESKIA=1" to enable Skia).
Comment 12 Xisco Faulí 2020-09-04 11:01:47 UTC
@Luboš Luňák, do the patches need to be backported to libreoffice-7-0 ?
Comment 13 Luboš Luňák 2020-09-04 12:32:27 UTC
(In reply to Xisco Faulí from comment #12)
> @Luboš Luňák, do the patches need to be backported to libreoffice-7-0 ?

No, this is only master.