fix offsets in our SSSE3 Skia functions (tdf#136326)

'src' is uint32_t, so that extra '*4' was wrong.

Change-Id: Ie0628a72bd4f7eb3122e4b1d67b6bb759f74bc46